tests/samples/invalid/endless_array_as_constant.pn

const A: [...]u8 = "Hello\0";
